# core

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  release.yml
data/endpoints/: application_command.json  audit_log.json  auto_moderation.json  channel.json  emoji.json  guild.json  guild_scheduled_event.json  guild_template.json  interaction.json  invite.json  stage_instance.json  sticker.json  user.json  webhook.json
discatcore/: __init__.py  client.py  enums.py  errors.py  file.py  flags.py  types.py  utils.py
discatcore/dispatcher/: __init__.py  event.py
discatcore/gateway/: __init__.py  client.py  events.py  ratelimiter.py  types.py
discatcore/gateway/events/: __init__.py  core.py  event_handler.py  event_protos.py
discatcore/http/: __init__.py  client.py  ratelimiter.py  route.py
discatcore/http/endpoints/: __init__.py  application_command.py  audit_log.py  auto_moderation.py  channel.py  core.py  emoji.py  guild.py  guild_scheduled_event.py  guild_template.py  interaction.py  invite.py  stage_instance.py  sticker.py  user.py  voice.py  webhook.py
discatcore/impl/: __init__.py  dispatcher.py  enums.py  event.py  ratelimit.py
discatcore/utils/: dispatcher.py  event.py  functools.py
scripts/: generate_endpoints.py
tests/: test_errors.py  test_file.py  test_types.py  test_utils.py
