# Build system/Metadata (PDM)

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "EmreTech", email = "emreterzioglu49@gmail.com"},
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp<3.9.0,>=3.6.0",
    "discord-typings<1.0.0,>=0.6.0",
]
name = "discatcore"
description = "A lower level Discord API wrapper that functions as the core layer of DisCatPy."
readme = "README.md"
keywords = [
    "discord",
    "api",
    "discord api",
    "wrapper",
    "discord api wrapper",
    "internet",
    "networking",
    "bots",
    "discord bots",
    "discord framework",
    "low level",
    "typed",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
license = {text = "MIT"}
dynamic = ["version"]

[project.urls]
"Bug Tracker" = "https://github.com/discatpy-dev/core/issues"
repository = "https://github.com/discatpy-dev/core"

[project.optional-dependencies]
speedup = [
    "orjson<4.0.0,>=3.9.2",
]

[tool.pdm.version]
source = "file"
path = "discatcore/__init__.py"

[tool.pdm.dev-dependencies]
lint = [
    "pyright==1.1.317",
]

# Formatting

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
py_version = 39
line_length = 100
combine_as_imports = true
filter_files = true

[tool.pyright]
strict = ["discatcore/**"]
